obsidian.css
/*
obsidian-plex

# Features

- [IBM Plex](https://www.ibm.com/plex/) fonts, must be locally installed.
- Monospace font for tables in editor mode

# Credits

- Color palette for graph in dark mode are from https://github.com/nickmilo/Cybertron
- Color palette for graph in light node are from https://github.com/ryjjin/Obsidian-Dark-Graphite-Pie-theme

*/

:root {
  --font-family-editor: 'IBM Plex Sans', var(--default-font); 
  --font-family-preview: 'IBM Plex Sans', var(--default-font);
  --font-family-monospace: 'IBM Plex Mono', 'Source Code Pro', monospace;
  
  --pie-graph-circle: #ec0c0c;
  --pie-graph-line: #cccccc;
  --pie-graph-text: #969696;
  --pie-graph-tag: #b9ec41;
  --pie-graph-attach: #83d4f4;
  --pie-graph-unresolved: #8f938f;

  --cybertron-graph-circle: #fcf601;
  --cybertron-graph-line: #26798c;
  --cybertron-graph-text: #cccccc;
  --cybertron-graph-tag: #5dbcd2;
  --cybertron-graph-attach: #d669bc;
  --cybertron-graph-unresolved: #9e8aff;

}

.theme-light
{
  --graph-circle: var(--pie-graph-circle);
  --graph-line: var(--pie-graph-line);
  --graph-text: var(--pie-graph-text);
  --graph-tag: var(--pie-graph-tag);
  --graph-attach: var(--pie-graph-attach);
  --graph-unresolved: var(--pie-graph-unresolved);

  /* obsidian defaults for light mode. */
  /* --obsidian-graph-circle: var(--text-normal);
  --obsidian-graph-line: var(--background-modifier-border);
  --obsidian-graph-text: var(--text-normal);
  --obsidian-graph-tag: #e0d3af;
  --obsidian-graph-attach: #83d4f4;
  --obsidian-graph-unresolved: var(--text-muted);

  --graph-circle: var(--obsidian-graph-circle);
  --graph-line: var(--obsidian-graph-line);
  --graph-text: var(--obsidian-graph-text);
  --graph-tag: var(--obsidian-graph-tag);
  --graph-attach: var(--obsidian-graph-attach);
  --graph-unresolved: var(--obsidian-graph-unresolved); */
}

.theme-dark {
  --graph-circle: var(--cybertron-graph-circle);
  --graph-line: var(--cybertron-graph-line);
  --graph-text: var(--cybertron-graph-text);
  --graph-tag: var(--cybertron-graph-tag);
  --graph-attach: var(--cybertron-graph-attach);
  --graph-unresolved: var(--cybertron-graph-unresolved);
}


/** Graph View ***************************************************************/

.graph-view.color-fill {
  color: var(--graph-circle);
}

.graph-view.color-circle {
  color: var(--graph-circle);
}

.graph-view.color-line {
  color: var(--graph-line);
}

.graph-view.color-text {
  color: var(--graph-text);
}

.graph-view.color-fill-highlight {
  color: var(--interactive-accent);
}

.graph-view.color-line-highlight {
  color: rgb(var(--interactive-accent-rgb));
}

.graph-view.color-fill-tag {
  color: var(--graph-tag) !important;
}

.graph-view.color-fill-attachment {
  color: var(--graph-attach) !important;
}

.graph-view.color-fill-unresolved {
  color: var(--graph-unresolved);
  opacity: 1;
}

.graph-view.color-arrow {
  color: var(--graph-line);
  opacity: 1;
}


/** Editor *******************************************************************/

.markdown-source-view {
  font-family: var(--font-family-editor);
}

.cm-s-obsidian .hmd-fold-html-stub,
.cm-s-obsidian .hmd-fold-code-stub,
.cm-s-obsidian .CodeMirror .HyperMD-hover > .HyperMD-hover-content code,
.cm-s-obsidian .cm-formatting-hashtag,
.cm-s-obsidian .cm-inline-code,
.cm-s-obsidian .HyperMD-codeblock,
.cm-s-obsidian .HyperMD-hr,
.cm-s-obsidian .cm-hmd-frontmatter,
.cm-s-obsidian .cm-hmd-orgmode-markup,
.cm-s-obsidian .cm-formatting-code,
.cm-s-obsidian .cm-math,
.cm-s-obsidian span.hmd-fold-math-placeholder,
.cm-s-obsidian .CodeMirror-linewidget kbd,
.cm-s-obsidian .hmd-fold-html kbd,
.cm-s-obsidian pre.HyperMD-table-row /* treat table rows as code */ {
  font-family: var(--font-family-monospace);
  font-size: 90%;
}

/** Preview ******************************************************************/

.markdown-preview-view {
  font-family: var(--font-family-preview);
}

